<resources>
    <string name="app_name">Calculadora_2</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="ingresa_numero1">Ingresa numero1</string>
    <string name="ingresa_numero2">Ingresa numero2</string>
    <string name="suma">SUMA</string>
    <string name="resta">RESTA</string>
    <string name="multiplicacion">MULTIPLICACION</string>
    <string name="division">DIVISION</string>
    <string name="ingrese_numero1">Ingrese numero1</string>
    <string name="ingrese_numero2">Ingrese numero2</string>
    <string name="resultado">Resultado</string>
</resources>