<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumero1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ingrese_numero1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/Calculadora"
        app:layout_constraintStart_toStartOf="@+id/Calculadora"
        app:layout_constraintTop_toBottomOf="@+id/Calculadora"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumero2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ingrese_numero2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumero1"
        app:layout_constraintStart_toStartOf="@+id/editTextNumero1"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero1"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:onClick="onClickSuma"
        android:text="@string/suma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultado" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickResta"
        android:text="@string/resta"
        app:layout_constraintBottom_toBottomOf="@+id/btnSuma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSuma"
        app:layout_constraintTop_toTopOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickMultiplicacion"
        android:text="@string/multiplicacion"
        app:layout_constraintEnd_toEndOf="@+id/btnSuma"
        app:layout_constraintStart_toStartOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickDivision"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="@+id/btnResta"
        app:layout_constraintStart_toEndOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <TextView
        android:id="@+id/Calculadora"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="Calculadora"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/resultado"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumero2"
        app:layout_constraintStart_toStartOf="@+id/editTextNumero2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero2" />

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:onClick="onClickLimpiar"
        android:text="LIMPIAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewResultado"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacion" />
</androidx.constraintlayout.widget.ConstraintLayout>